<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add">ADD</string>
    <string name="LeadingIn">导入</string>
    <string name="LeadingOut">导出</string>
    <string name="giveback">GIVE BACK</string>
    <string name="update">更新组员信息</string>
    <string name="delete">Delete Card</string>
    <string name="change">Change Owner</string>
    <string name="delete_teammember">删除此人</string>
    <string name="empty">No items.</string>
    <string name="card_name">SIM卡名称:</string>
    <string name="card_number">SIM卡卡号:</string>
    <string name="listteammember">编辑组员</string>
    <string name="addteammember">增加组员</string>
    <string name="cmcc">CMCC</string>
    <string name="cu">CU</string>
    <string name="ctc">CTC</string>
    <string name="contentDescription">contentDescription</string>
    <string name="membername">组员名字 </string>
    <string name="phonenumber">手机号码</string>
    <string name="singleId">singleID</string>

</resources>