<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add"/>
    <item
        android:id="@+id/action_LeadingIn"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/LeadingIn"/>
    <item
        android:id="@+id/action_LeadingOut"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/LeadingOut"/>
    <item
        android:id="@+id/action_addteammember"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/addteammember"/>
    <item
        android:id="@+id/action_listteammember"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/listteammember"/>

</menu>