<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_above_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/card_name_i"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_mid_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/card_number_i"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_below_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="运营商：" />

            <RadioGroup
                android:id="@+id/radioOper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_cmcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/cmcc" />

                <RadioButton
                    android:id="@+id/radio_cu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cu" />

                <RadioButton
                    android:id="@+id/radio_ctc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ctc" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/make_sure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/add_bt"
        android:text="@string/add" />

</LinearLayout>