<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:background="@drawable/table_above_bg"
		        android:orientation="horizontal" >
		        <TextView
		            android:id="@+id/singleId"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textStyle="bold"
		            android:text="@string/singleId" />
		        <EditText
		            android:id="@+id/singleId_context"
		            android:layout_width="178dp"
		            android:inputType="text"
		            android:layout_height="wrap_content" />
		    </LinearLayout>
		    		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:background="@drawable/table_above_bg"
		        android:orientation="horizontal" >
		        <TextView
		            android:id="@+id/membername"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textStyle="bold"
		            android:text="@string/membername" />
		        <EditText
		            android:id="@+id/membername_context"
		            android:layout_width="178dp"
		            android:inputType="text"
		            android:layout_height="wrap_content" />
		    </LinearLayout>
		
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:background="@drawable/table_mid_bg"
		        android:orientation="horizontal" >
		        <TextView
		            android:id="@+id/phonenumber"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textStyle="bold"
		            android:text="@string/phonenumber" />
		        <EditText
		            android:id="@+id/phonenumber_context"
		            android:layout_width="178dp"
		            android:inputType="number"
		            android:layout_height="wrap_content"/>
		    </LinearLayout>

        </LinearLayout>
            <Button
        android:id="@+id/make_sure_team"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_bt"
        android:layout_margin="10dp"
        android:text="@string/add" />


</LinearLayout>
